k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idurar-erp-crm
  namespace: idurar-erp-crm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: erp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idurar-frontend
                port:
                  number: 80
